// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`platform/azure/util getProjectAndRepo should return the object with project and repo 1`] = `
Object {
  "project": "prjName",
  "repo": "myRepoName",
}
`;

exports[`platform/azure/util getProjectAndRepo should return the object with same strings 1`] = `
Object {
  "project": "myRepoName",
  "repo": "myRepoName",
}
`;

exports[`platform/azure/util getRenovatePRFormat should be formated (closed v2) 1`] = `
Object {
  "body": undefined,
  "createdAt": undefined,
  "displayNumber": "Pull Request #undefined",
  "number": undefined,
  "sourceBranch": undefined,
  "sourceRefName": undefined,
  "state": "merged",
  "status": 3,
  "targetBranch": undefined,
}
`;

exports[`platform/azure/util getRenovatePRFormat should be formated (closed) 1`] = `
Object {
  "body": undefined,
  "createdAt": undefined,
  "displayNumber": "Pull Request #undefined",
  "number": undefined,
  "sourceBranch": undefined,
  "sourceRefName": undefined,
  "state": "closed",
  "status": 2,
  "targetBranch": undefined,
}
`;

exports[`platform/azure/util getRenovatePRFormat should be formated (isConflicted) 1`] = `
Object {
  "body": undefined,
  "createdAt": undefined,
  "displayNumber": "Pull Request #undefined",
  "isConflicted": true,
  "mergeStatus": 2,
  "number": undefined,
  "sourceBranch": undefined,
  "sourceRefName": undefined,
  "state": "open",
  "targetBranch": undefined,
}
`;

exports[`platform/azure/util getRenovatePRFormat should be formated (not closed) 1`] = `
Object {
  "body": undefined,
  "createdAt": undefined,
  "displayNumber": "Pull Request #undefined",
  "number": undefined,
  "sourceBranch": undefined,
  "sourceRefName": undefined,
  "state": "open",
  "status": 1,
  "targetBranch": undefined,
}
`;

exports[`platform/azure/util getStorageExtraCloneOpts should configure basic auth 1`] = `
Object {
  "-c": "http.extraheader=AUTHORIZATION: basic dXNlcjpwYXNz",
}
`;

exports[`platform/azure/util getStorageExtraCloneOpts should configure bearer token 1`] = `
Object {
  "-c": "http.extraheader=AUTHORIZATION: bearer token",
}
`;

exports[`platform/azure/util getStorageExtraCloneOpts should configure personal access token 1`] = `
Object {
  "-c": "http.extraheader=AUTHORIZATION: basic OjEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTI=",
}
`;

exports[`platform/azure/util max4000Chars should be the same 1`] = `"Hello"`;
